clang/test/BSC/Negative/OwnedStruct/access/owned-struct-static-variable-access.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A {};

int A::a = 2; // expected-error {{no member named 'a' in 'struct A'}}

